Edited related work in proposal. Added summaries to related_work.

--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -36,7 +36,7 @@
 	author = {Viktor Pekar and Steffen Staab},
 	evastar_pdf = {2002_34_Pekar_Taxonomy_Learni_1.pdf}
 }
-@article{abs-1301-3781,
+@article{mikolov2013,
   author    = {Tomas Mikolov and
                Kai Chen and
                Greg Corrado and
@@ -205,3 +205,17 @@ year = {1997}
   timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GregorDGW15},
 }
+@inproceedings{Arisoy:2012:DNN:2390940.2390943,
+ author = {Arisoy, Ebru and Sainath, Tara N. and Kingsbury, Brian and Ramabhadran, Bhuvana},
+ title = {Deep Neural Network Language Models},
+ booktitle = {Proceedings of the NAACL-HLT 2012 Workshop: Will We Ever Really Replace the N-gram Model? On the Future of Language Modeling for HLT},
+ series = {WLM '12},
+ year = {2012},
+ location = {Montreal, Canada},
+ pages = {20--28},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2390940.2390943},
+ acmid = {2390943},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
