--- a/proposal/related_work.ltx
+++ b/proposal/related_work.ltx
@@ -52,6 +52,14 @@ Not relevant for the thesis, because the work is concerned with finding new rule
 of the thesis is to find new connections in the taxonomy of a KB. And other papers solve problems with a higher
 similarity to the thesis' problem.
 
+\subsection{Ontology Learning for the Semantic Web}
+The task of ontology learning is analyzed by \cite{Maedche2001}. A semi-automated approach is considered, which
+consists of 5 steps: import/reuse existing ontologies, extract major parts of target ontology, prune to adjust 
+ontology for primary purpose, refine ontology to complete ontology at fine granularity, and apply ontology
+on target applications, which validates the results. These steps may be repeated as often as necessary.\\
+The problem of the thesis belongs to the task of ontology refinement, because an ontology is already 
+provided. 
+
 \section{Neural networks}
 
 \subsection{Using Recurrent Neural Network for Learning Expressive Ontologies}
